fix(storybook): dark mode toggle

--- a/assets/css/storybook.css
+++ b/assets/css/storybook.css
@@ -11,4 +11,8 @@
 	/* * {
     font-family: ui-sans-serif, system-ui;
   } */
+
+	.dark .theme-dark {
+		@apply py-8 bg-slate-900;
+	}
 }
